--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "jquery": "^3.2.1",
+    "mongoose": "^4.11.11",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
   }
