--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^3.3.7",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "ejs": "^2.5.7",
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "jquery": "^3.2.1",
