--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jade": "~1.11.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "markdown-it": "^8.4.0",
     "moment": "^2.18.1",
     "mongoose": "^4.11.11",
     "morgan": "~1.8.1",
@@ -29,6 +30,7 @@
     "passport-qq": "0.0.3",
     "serve-favicon": "~2.4.2",
     "shortid": "^2.2.8",
-    "validator": "^8.2.0"
+    "validator": "^8.2.0",
+    "xss": "^0.3.4"
   }
 }
